--- a/resume/iframeResume.css
+++ b/resume/iframeResume.css
@@ -1,10 +1,130 @@
 body{
-
+    height:auto;
+    width: auto;
 }
 .container{
+    width: 100%;
     height: 100%;
     display: grid;
     grid-gap: 5px;
     grid-template-columns: repeat(20, 1fr);
-    grid-template-rows: 70px 125px 125px 125px 125px 125px 80px;
+    grid-template-rows: 55px 75px 75px 75px 75px 32px 32px;
+}
+.container-item3{
+    grid-row-gap: 0;
+}
+.item{
+    /*display: flex;*/
+    height: 100%;
+    width: 100%;
+
+}
+.item1{
+    background-color: grey;
+    grid-column: 1 / -1;
+    border-bottom: solid white 5px;
+    grid-row-gap: 5px;
+}
+.item2{
+    background-color: grey;
+    grid-row: 2 / 7;
+}
+.item3{
+    /*display: flex;*/
+    /*background-color: transparent;*/
+    grid-column: 2 / 8;
+    grid-row: 2/6;
+    background: orange;
+
+    /*position: relative;*/
+}
+/*.cog{*/
+    /*display: flex;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*justify-content: center;*/
+    /*align-items: flex-start;*/
+
+}
+.fa-cog{
+    display: flex;
+    height: 30%;
+    font-size: 20px;
+}
+
+
+.item4{
+    background-color: orange;
+    grid-column:  8/ 14;
+    grid-row: 2 / 6;
+    grid-row-gap: 0;
+    /*background-color: orange;*/
+
+}
+.item5{
+    background-color: grey;
+    grid-column: 2 / 8;
+    grid-row: 3/4;
+    grid-row-gap: 0;
+}
+.item7{
+    background-color: orange;
+    grid-column: 8/ 14;
+    grid-row: 2/3;
+
+
+}
+/*.item7{*/
+    /*background-color: grey;*/
+    /*grid-row: 5/6;*/
+    /*grid-column: 2/3;*/
+
+/*}*/
+.item8{
+    background-color: grey;
+    grid-row: 5/6;
+    grid-column: 17/18;
+
+}
+.item9{
+    background-color: grey;
+    grid-row: 5/6;
+    grid-column: 18/19;
+
+}
+.item10{
+    background-color: grey;
+    grid-row: 5/6;
+    grid-column: 19/20;
+
+}
+.item11{
+    background-color: grey;
+    grid-row: 6/7;
+    grid-column: 15/16;
+}
+.item12{
+    background-color: grey;
+    grid-row: 6/7;
+    grid-column: 16/17;
+}
+.item13{
+    background-color: grey;
+    grid-row: 6/7;
+    grid-column: 17/18;
+}
+.item14{
+    background-color: grey;
+    grid-row: 6/7;
+    grid-column: 18/19;
+}
+.item15{
+    background-color: blue;
+    grid-row: 6/7;
+    grid-column: 19/20;
+}
+.item16{
+    background-color: grey;
+    grid-row: 7/8;
+    grid-column: 1/-1;
 }
